--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "test": "node ./bin/www test;"
   },
   "dependencies": {
+    "auto-updater": "^1.0.2",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "cookie-parser": "^1.4.4",
@@ -48,6 +49,7 @@
     "mongodb": "^3.2.6",
     "mongoose": "^5.5.11",
     "morgan": "^1.9.1",
+    "nodegit": "^0.24.3",
     "path": "^0.12.7"
   },
   "license": "MIT"
