--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "MayorChano <dan@dancodes.online>",
   "repository": "https://github.com/MayorChano/NodeJS",
   "log": "tech",
-  "update": "yes",
+  "update": "no",
   "keywords": [
     "template",
     "express",
