--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mongodb": "^3.2.6",
     "mongoose": "^5.5.11",
     "morgan": "^1.9.1",
+    "os-utils": "0.0.14",
     "path": "^0.12.7"
   },
   "license": "MIT"
